syntax = "proto3";

package exchange;

service Users {
	rpc SignUp(SignUpData) returns (OperationOutcome) {}
	rpc Login(LoginData) returns (LoginResponse) {}
	rpc Deposit(DepositData) returns (OperationOutcome) {}
	rpc Withdraw(WithdrawData) returns (OperationOutcome) {}
	rpc Buy(BuyData) returns (OperationOutcome) {}
	rpc ListTransactions(TransactionListFilters) returns (TransactionList) {}
}

message UserData {
	string name = 3;
	string iban = 4;
}

message OperationOutcome {
	bool success = 1;
}

message LoginData {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	int32 id = 1;
}

message SignUpData {
	LoginData login = 1;
	UserData user = 2;
}

message Amount {
	float value = 1;
	string currency = 2;
}

message DepositData {
	int32 user = 1;
	Amount amount = 2;
}

message WithdrawData {
	int32 user = 1;
	Amount amount = 2;
}

message BuyData {
	int32 user = 1;
	Amount from = 2;
	string to = 3;
}

message TransactionListFilters {
	int32 user = 1;
	string date = 2;
	string currency = 3;
}

message Transaction {
	Amount spent = 1;
	Amount gained = 2;
	string timestamp = 3;
}

message TransactionList {
	repeated Transaction transactions = 1;
}